--- a/css/mdc.card.css
+++ b/css/mdc.card.css
@@ -230,5 +230,5 @@ html[dir] .mdc-card[dir="rtl"] > .mdc-card-primary > .header > .title + .thumbna
 
 .mdc-card > .mdc-button-group {
     padding: 0;
-    margin: 0.5rem;
+    margin: 0.5rem 0.25rem;
 }
