--- a/css/mdc.data.table.css
+++ b/css/mdc.data.table.css
@@ -66,7 +66,7 @@ html[dir] .mdc-data-table[dir="rtl"] > .header > .actions > .action-item {
 }
 
 .mdc-data-table > .header > .mdc-button-group {
-    margin: 0;
+    margin: 0 -0.25rem;
     padding: 0;
 }
 
